Fix the documentation building.
 * Add the missing `.readthedocs.yml` file.
 * Use hdl organization's hdlparse fork.
 * Add missing `third_party/make-env` submodule.
 * Revert the `docs/Makefile` to match skywater-pdk's version.

Signed-off-by: Tim 'mithro' Ansell <tansell@google.com>

--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -8,6 +8,7 @@ sphinx-verilog-domain
 sphinxcontrib-hdl-diagrams
 # Module diagrams
 git+https://github.com/SymbiFlow/symbolator.git#egg=symbolator
+git+https://github.com/hdl/pyHDLparser.git#egg=hdlparse
 # pycairo
 # vext.gi
 restructuredtext-lint
