--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -13,17 +13,17 @@
 # limitations under the License.
 #
 # SPDX-License-Identifier: Apache-2.0
-name: skywater-pdk-docs
-channels:
-- symbiflow
-- conda-forge
-- defaults
-dependencies:
-- python=3.8
-- pip
-- yosys
-- netlistsvg
-# Packages installed from PyPI
-- pip:
-  - -r requirements.txt
 
+# .readthedocs.yml
+# Read the Docs configuration file
+# See https://docs.readthedocs.io/en/stable/config-file/v2.html for details
+
+# Required
+version: 2
+
+# Build documentation in the docs/ directory with Sphinx
+sphinx:
+  configuration: docs/conf.py
+
+conda:
+  environment: docs/environment.yml
